[project]
name = "klaus-kode"
version = "0.1.0"
description = "Donate your Claude credits to open source by autonomously working on GitHub issues"
requires-python = ">=3.10"
dependencies = ["claude-agent-sdk"]
# Other runtime deps (git, gh) are provided by Docker

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-asyncio>=0.21"]

[project.scripts]
klaus-kode = "klaus_kode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
